--- a/index.html
+++ b/index.html
@@ -12,7 +12,17 @@
 	<div class="container">
 		<header class="wide">
 			<div class="logo left"></div>
-			<nav class="wx menu"></nav>
+			<nav class="cover f8 wx menu">
+				<menu>
+					<li><a href="#">home</a></li>
+					<li><a href="#">page</a></li>
+					<li><a href="#">about us</a></li>
+					<li><a href="#">gallery</a></li>
+					<li><a href="#">blog</a></li>
+					<li><a href="#">contact us</a></li>
+				</menu>
+				<div class="badboy"></div>
+			</nav>
 			<div class="badboy"></div>
 		</header>
 		<div class="wide slide">
