--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
 <head>
 	<meta charset="UTF-8" />
-	<title>Arka Sanat Pazh</title>
+	<title>Arka Sanat Pazh (ASP)</title>
 	<link rel="stylesheet" type="text/css" href="reset.css" />
 	<link rel="stylesheet" type="text/css" href="1styles.css" />
 	<script type="text/javascript" src="html5shiv.js"></script>
